--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -36,4 +36,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Spring-Petclinic -Dsonar.projectName='Spring-Petclinic'
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Spring-petclinic -Dsonar.projectName='Spring-petclinic'
