--- a/.github/workflows/chgpt.yaml
+++ b/.github/workflows/chgpt.yaml
@@ -13,7 +13,7 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
       EC2_USER: ubuntu
-      EC2_HOST: <EC2-PUBLIC-IP>  # ersetzt durch deine EC2-Public-IP
+      EC2_HOST: 3.136.26.224  # ersetzt durch deine EC2-Public-IP
 
     steps:
       # 1️⃣ Checkout Code
