--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -44,4 +44,18 @@ jobs:
         with:
           name: spring-petclinic-jar
           path: target/spring-petclinic-*.jar
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Download Jar from CI
+        uses: actions/download-artifact@v4
+        with:
+          name: spring-petclinic-jar
+          path: target
  
