--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -58,4 +58,14 @@ jobs:
         with:
           name: spring-petclinic-jar
           path: target
- 
+          
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
+
+      - name: Remove any existing app (Kill process on port 8080 on remote host)
+        run: ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "fuser -k 8080/tcp || true"
+
+      - name: Copy JAR to EC2
+        run: scp -o StrictHostKeyChecking=no target/spring-petclinic-*.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/
