--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -45,28 +45,34 @@ jobs:
           name: spring-petclinic-jar
           path: target/spring-petclinic-*.jar
 
+jobs:
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build ]
 
     steps:
-      - name: Check out code
+      # Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # SSH Agent starten und Private Key hinzufügen
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
+
+      # Optional: Archive artifact vorher erstellen (falls nötig)
       - name: Download Jar from CI
         uses: actions/download-artifact@v4
         with:
           name: spring-petclinic-jar
           path: target
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: |
-            ${{ secrets.EC2_PRIVATE_KEY }}
+      # Stoppe Port 8080, falls noch belegt
+      - name: Free port 8080
+        run: ssh -o StrictHostKeyChecking=no ubuntu@18.117.247.109 "fuser -k 8080/tcp || true"
 
-      - name: Remove any existing app (Kill process on port 8080 on remote host)
-        run: ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "fuser -k 8080/tcp || true"
-
-      - name: Copy JAR to EC2
-        run: scp -o StrictHostKeyChecking=no target/spring-petclinic-*.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/
+      # Starte die Spring Boot App
+      - name: Start Spring Petclinic
+        run: ssh -o StrictHostKeyChecking=no ubuntu@18.117.247.109 "
+          nohup java -jar ~/target/spring-petclinic-*.jar > ~/app.log 2>&1 &
+        "
