--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -74,5 +74,4 @@ jobs:
       # Starte die Spring Boot App
       - name: Start Spring Petclinic
         run: ssh -o StrictHostKeyChecking=no ubuntu@18.117.247.109 "
-          nohup java -jar ~/target/spring-petclinic-*.jar > ~/app.log 2>&1 &
-        "
+          nohup java -jar ~/target/spring-petclinic-*.jar > ~/app.log 2>&1 &"
