--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -48,11 +48,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [ build ]
-    
+
     steps:
       # Checkout Code
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Download Jar from CI
+        uses: actions/download-artifact@v4
+        with:
+          name: spring-petclinic-jar
+          path: target
 
       # SSH Agent starten und Private Key hinzufügen
       - name: Setup SSH
