--- a/.github/workflows/cicdsonar.yaml
+++ b/.github/workflows/cicdsonar.yaml
@@ -66,18 +66,18 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
 
-      # Optional: Archive artifact vorher erstellen (falls nötig)
-      - name: Download Jar from CI
-        uses: actions/download-artifact@v4
-        with:
-          name: spring-petclinic-jar
-          path: target
-
       # Stoppe Port 8080, falls noch belegt
       - name: Free port 8080
         run: ssh -o StrictHostKeyChecking=no ubuntu@18.117.247.109 "fuser -k 8080/tcp || true"
 
-      # Starte die Spring Boot App
+      - name: Copy JAR to EC2
+        run: scp -o StrictHostKeyChecking=no target/spring-petclinic-*.jar ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/
+
+      - name: Ensure Java is installed on remote
+        run: ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} \
+          "sudo apt update && sudo apt install -y openjdk-25-jre"
+
+        # Starte die Spring Boot App
       - name: Start Spring Petclinic
         run: ssh -o StrictHostKeyChecking=no ubuntu@18.117.247.109 "
           nohup java -jar ~/target/spring-petclinic-*.jar > ~/app.log 2>&1 &"
